--- a/Lab 6/main.html
+++ b/Lab 6/main.html
@@ -158,6 +158,6 @@
     
     </footer>
         <script src="../JS/vhod.js"></script>
-        <script src="main.js"></script>
+        <script src="../JS/main.js"></script>
     </body>
 </html>
