--- a/Lab 5/main.html
+++ b/Lab 5/main.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <script src="main.js"></script>
+    <script src="post.js"></script>
+    <script src="reg.js"></script>
     <header>
         <div class="Logo">
             <img class="logotipe" src="../Photos/Logo.png">
