--- a/Lab 5/post.html
+++ b/Lab 5/post.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +8,8 @@
     <title>Добавить запись</title>
 
     <link rel="stylesheet" href="../CSS/post.css">
+    <link rel="stylesheet" href="../CSS/up_bellow.css">
+    <link rel="stylesheet" href="../CSS/delete.css">
     
 </head>
 <body>
@@ -30,7 +32,7 @@
     </header>
 
     <div class="site_centr"> 
-        <h1>Добавить запись</h1>
+        <h1 class="second_title">Добавить запись</h1>
 
     <div class="all_content">
 
@@ -53,7 +55,7 @@
                 <input id="add_file" class="button_add_file" type="file" accept="image/*">
                 <label class = "button_add_file">
                     <img src = "../Photos/add.svg">
-                    <label class = "text">Прикрепить файл изображения</label>
+                    <label class = "text_file">Прикрепить файл изображения</label>
                 </label>
 
                 <img id = "img_file">
@@ -80,6 +82,6 @@
         </div>
     
     </footer>
-
+    <script src="../JS/post.js"></script>
 </body>
 </html>
