--- a/Lab 5/main.html
+++ b/Lab 5/main.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="../CSS/main.css">
+    <link rel="stylesheet" href="../CSS/delete.css">
+    <link rel="stylesheet" href="../CSS/up_bellow.css">
     
     <title>Лента публикаций</title>
 </head>
