--- a/Lab 7/vue.html
+++ b/Lab 7/vue.html
@@ -29,20 +29,20 @@
         </header>
         
 <div class = "vhod">
-    <form class = "forma" method="POST">            <div class = "nadpis">
-    <h3 class = "nadpis_vhod">Вход</h3>              <img class = "close" src = "../Photos/close.svg">
+    <form class="forma" method="POST">            <div class="nadpis">
+    <h3 class="nadpis_vhod">Вход</h3>              <img class="close" src="close.svg">
     </div>    
-<div class = "login_password">
-    <label class = "login_and_pass">Логин</label>
-    <input class = "input" type = "text">
+<div class="login_password">
+    <label class="login_and_pass">Логин</label>
+    <input class="input" type="text">
 </div>
-<div class = "login_and_pass">
-    <label class = "pass">Пароль</label>
-    <input class = "input" type = "password">
+<div class="login_and_pass">
+    <label class="pass">Пароль</label>
+    <input class="input" type="password">
 </div>
-<div class = "button_vhod">
-<button class = "button" type = "submit">Войти</button>
-<a class = "link">Забыли пароль?</a>
+<div class="button_vhod">
+<button class= "button" type="submit">Войти</button>
+<a class="link">Забыли пароль?</a>
 </div>
 </form>
 </div>
@@ -87,9 +87,9 @@
         </footer>
     </div>
 
-    <script src="../JS/vue.min.js"></script>
-    <script src="../JS/data.js"></script>
-    <script src="../JS/vue.js"></script>
-    <script src="../JS/vhod.js"></script>
+    <script src="vue.min.js"></script>
+    <script src="data.js"></script>
+    <script src="vue.js"></script>
+    <script src="vhod.js"></script>
 </body>
 </html>
