--- a/Lab 7/reg.html
+++ b/Lab 7/reg.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="../CSS/reg.css">
-    <link rel="stylesheet" href="../CSS/up_bellow.css">
-    <link rel="stylesheet" href="../CSS/delete.css">
+    <link rel="stylesheet" href="reg.css">
+    <link rel="stylesheet" href="up_bellow.css">
+    <link rel="stylesheet" href="CSS/delete.css">
     
     <title>Регистрация</title>
 </head> 
@@ -15,9 +15,9 @@
 <body>
     <header>
         <div class="Logo">
-            <img class="logotipe" src="../Photos/Logo.png">
+            <img class="logotipe" src="Logo.png">
                 <nav class="prof">
-                     <img class="profile" src="../Photos/Profile.svg">
+                     <img class="profile" src="Profile.svg">
                     <div class="links_entry_exit"> 
                         <a class="link_entry_exit white" href="#">Войти</a>
                         <a class="link_entry_exit white" href="#">Зарегистрироваться</a>
@@ -98,6 +98,6 @@
             </div>
         </div>
     </footer>
-    <script src="../JS/reg.js"></script>
+    <script src="reg.js"></script>
 </body>
 </html>
