--- a/Lab 7/main.html
+++ b/Lab 7/main.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../CSS/main.css">
-    <link rel="stylesheet" href="../CSS/up_bellow.css">
-    <link rel="stylesheet" href="../CSS/delete.css">
-    <link rel="stylesheet" href="../CSS/vhod.css">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="up_bellow.css">
+    <link rel="stylesheet" href="delete.css">
+    <link rel="stylesheet" href="vhod.css">
 
     <title>Лента публикаций</title>
 </head>
@@ -17,9 +17,9 @@
 <body>
     <header>
         <div class="Logo">
-            <img class="logotipe" src="../Photos/Logo.png">
+            <img class="logotipe" src="Logo.png">
             <nav class="prof">
-                <img class="profile" src="../Photos/Profile.svg">
+                <img class="profile" src="Profile.svg">
                 <div class="links_entry_exit">
                     <a id="voity" class="link_entry_exit white" href="#">Войти</a>
                     <a class="link_entry_exit white" href="#">Зарегистрироваться</a>
@@ -32,7 +32,7 @@
         <form class="forma" method="POST">
             <div class="nadpis">
                 <h3 class="nadpis_vhod">Вход</h3>
-                <img class="close" src="../Photos/close.svg">
+                <img class="close" src="close.svg">
             </div>
 
             <div class="login_and_pass">
@@ -113,11 +113,10 @@
         </div>
     </footer>
 
-    <script src="../JS/vue.min.js"></script>
-    <script src="../JS/data.js"></script>
-    <script src="../JS/vue.js"></script>
-    <script src="../JS/vhod.js"></script>
-    <!-- <script src="main.js"></script> -->
+    <script src="vue.min.js"></script>
+    <script src="data.js"></script>
+    <script src="vue.js"></script>
+    <script src="vhod.js"></script>
 </body>
 
 </html>
